# ChatMasala

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: db.py  main.py  models.py  orchestrator.py  parser.py  prompts.py  schemas.py
app/agents/: cli_runner.py
app/routes/: browse.py  runs.py  settings.py  threads.py  workspaces.py
app/static/: main.css  main.js
app/templates/: base.html  profile_form.html  run_detail.html  run_list.html  run_new.html  settings.html  thread_detail.html  thread_list.html  thread_new.html  workspace_detail.html  workspace_list.html  workspace_new.html
docs/: agent-library-draft.md  build-plan.md  future-directions.md  mvp-build-spec.md
docs/archive/2026-03-16/: README.md  chatmasala-data-model.md  multi-agent-intent-and-spec-v1.md
docs/archive/2026-03-16/examples/: policy-pack-baseline.yaml  policy-pack-thread-custom.yaml  prompt-profiles.yaml  thread-examples.yaml
docs/archive/2026-03-16/schemas/: policy-pack.schema.yaml  prompt-profile.schema.yaml
docs/examples/: prompt-profiles.yaml  thread-examples.yaml
docs/schemas/: prompt-profile.schema.yaml
profiles/agents/: brainstorm-a.md  brainstorm-b.md  builder-v2.md  builder.md  critic.md  decider.md  human-gate.md  planner.md  repo-context.md  reviewer-v2.md  reviewer.md
profiles/agents/archive/: single-agent.md
tests/: test_db.py  test_models.py  test_orchestrator.py  test_parser.py  test_placeholder.py  test_routes.py  test_workspace_models.py
tests/e2e/: test_workspace_smoke.py
tmp/Multi-Chat Workflow Builder/: README.md  index.html
(+9 files in other folders)
